--- a/app/views/maintenance/scraperesults.html.erb
+++ b/app/views/maintenance/scraperesults.html.erb
@@ -40,7 +40,7 @@
         <div class="col-md-9">
           <%= link_to album.name, album %> (ID: <%= album.id %>)  <%= link_to "Edit", edit_album_path(album)  %><br>
           <%= album.classification %><br>
-          <%= album.releasedate %> <br>
+          <%= album.release_date %> <br>
           <%= link_to album.reference.first[1], album.reference.first[1] %>   
         </div>
       </div>
