--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -19,7 +19,7 @@
     <div id="Attributes" class="well">
       <% if can? :manage, Artist %>
         <%= attribute_display(@artist, 'status', "Status") %>
-        <%= attribute_display(@artist, 'dbcomplete', "Database Status") %>
+        <%= attribute_display(@artist, 'db_status', "Database Status") %>
       <% end %>
       <% @related.each do |k,v| %>
         <%= linked_attribute_display(v,k) %>
