--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -17,6 +17,12 @@
   <% end %>
 </div>
 
+<% if can? :edit, Issue %>
+<%= link_to "New Issue", new_issue_path %>
+<% end %>
+
 <% content_for :usersidebar do %>
 <% end %>
+
+
 
