--- a/app/views/layouts/_albums.html.erb
+++ b/app/views/layouts/_albums.html.erb
@@ -11,7 +11,7 @@
         <% end %>     
       <% end %>
       <div class="pull-right">
-        <%= relation.album.releasedate %>
+        <%= relation.album.release_date %>
       </div>
       <div class="Albumpreviews" id="<%= relation.album.id %>"></div>
     </div>
