--- a/app/views/layouts/albumlist/_albumlist_album_2.html.erb
+++ b/app/views/layouts/albumlist/_albumlist_album_2.html.erb
@@ -23,6 +23,6 @@
   <% end %>
   <div class="album-footer text-center">
     <%= link_to name_language_helper(album,current_user,0), album %>
-    <%= album.releasedate.strftime('%B %-d, %Y') %>     
+    <%= album.release_date.strftime('%B %-d, %Y') %>     
   </div>
 </div>
