--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -56,7 +56,7 @@
 <% content_for :usersidebar do %>
   <% if current_user %>
     <div class="well">
-      <% if watched? current_user, @organization %>
+      <% if @organization.watched? current_user %>
       <div id="WatchLink">You're watching this label<br>
         <%= link_to "Remove from Watchlist?", unwatch_path(:user_id => current_user.id, :watched_id => @organization.id, :watched_type => "Organization"), :remote => true %>      
       </div>
