--- a/app/views/organizations/showimages.html.erb
+++ b/app/views/organizations/showimages.html.erb
@@ -1,1 +1,1 @@
-<%= render :partial => "layouts/images/show_images", :locals => {:record => @source}  %>
+<%= render :partial => "layouts/images/show_images", :locals => {:record => @organization}  %>
