Finished all model testing except users and abilities

--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -22,7 +22,7 @@
         <%= f.text_field :altname, :class => "controls" %>
       </div>
       <div class="control-group">
-        <%= f.label :catalognumber, "Catalog Number:", :class => "control-label"  %>
+        <%= f.label :catalog_number, "Catalog Number:", :class => "control-label"  %>
         <%= f.text_field :catalog_number, :class => "controls input-medium" %>
       </div>      
       <div class="control-group">
