--- a/app/views/users/edit_security.html.erb
+++ b/app/views/users/edit_security.html.erb
@@ -7,21 +7,19 @@
 <% end %>
 
 
-<%= form_for(@user) do |f| %>
+<%= form_for(@user, :url=> "update_security") do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-      <% @user.errors.full_messages.each do |msg| %>
+      <ul><% @user.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
-      <% end %>
-      </ul>
+      <% end %></ul>
     </div>
   <% end %>
     <%= f.label :security %>
-    <%= f.collection_select :security, User::Security, :to_s, :humanize %>
-  <div class="actions">
+    <% Ability::Abilities.each do |ability| %>
+      <%= check_box_tag "user[abilities][]", ability, @user.abilities.include?(ability) %> <%= ability %><br>
+    <% end %>    <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
