fixed maintenance tools

--- a/app/views/layouts/maintenance/_released_review_table.html.erb
+++ b/app/views/layouts/maintenance/_released_review_table.html.erb
@@ -24,7 +24,7 @@
         <% end %>
       </td>
       <td><%= record.status %></td>
-      <td><%= record.dbcomplete %></td>
+      <td><%= record.db_status %></td>
       <td><%= record.category %></td>
       <td><%= record.activity %></td>
       <td><%= reference_helper(record) %></td>
