--- a/app/views/issues/_form.html.erb
+++ b/app/views/issues/_form.html.erb
@@ -25,7 +25,7 @@
 </div>
 <div class="control-group">
   <%= f.label :visibility, "Security:", :class => "control-label" %>
-  <%= f.select :visibility, Ability::Visibility %>
+  <%= f.select :visibility, Ability::Abilities %>
 </div>
 <div class="control-group">
   <%= f.label :resolution, "Resolution:", :class => "control-label" %>
