--- a/app/views/issues/_form.html.erb
+++ b/app/views/issues/_form.html.erb
@@ -33,7 +33,7 @@
 </div>
 <div class="control-group">
   <%= f.label :difficulty, "Difficulty:", :class => "control-label" %>
-  <%= f.select :difficulty, Issue::Difficulty, :include_blank => true %>
+  <%= f.select :difficulty, Issue::Difficulties, :include_blank => true %>
 </div>
 <div class="field">
   <%= f.label :description %>
