--- a/app/views/songs/_add_song_form.html.erb
+++ b/app/views/songs/_add_song_form.html.erb
@@ -1,9 +1,9 @@
 <div class="row-fluid">
-  <%= fields_for 'album[newsongs][tracknumbers]' do |f| %>
+  <%= fields_for 'album[new_songs][track_numbers]' do |f| %>
     <%= f.label '', "Track Number:", :class => 'control-label' %>
     <%= f.text_field '', :class => 'input-xmini' %>
   <% end %>
-  <%= fields_for 'album[newsongs][names]' do |f| %>
+  <%= fields_for 'album[new_songs][names]' do |f| %>
     <%= f.label '', "Name:", :class => 'control-label' %>
 		<%= f.text_field '', :class => 'input-large' %>
   <% end %>
