--- a/app/views/sources/edit.html.erb
+++ b/app/views/sources/edit.html.erb
@@ -1,8 +1,8 @@
-<% content_for :title do %>Edit - <%= name_language_helper(@source,current_user,0) %><% end %>
+<% content_for :title do %>Edit - <%= name_language_helper(@source,current_user,0, no_bold: true) %><% end %>
 
 <% content_for :header do %>
   <div class="text-center">
-    <h2>Edit Source: <%= link_to name_language_helper(@source,current_user,0), @source %></h2>
+    <h2>Edit Source: <%= link_to name_language_helper(@source,current_user,0, no_bold: true), @source %></h2>
   </div>
 <% end %>
 
