Finshed forms for primary models

--- a/app/assets/stylesheets/V1.css.scss
+++ b/app/assets/stylesheets/V1.css.scss
@@ -37,6 +37,10 @@ body { padding-top: 30px; } //Padding for the fixed header
     .input-xmini {
      width: 5%;
     }    
+    
+    .input-xlarge {
+      width: 35%;
+    }
 
     .input-xsmall {
      width: 10% !important;
