--- a/app/views/layouts/forms/_form.html.erb
+++ b/app/views/layouts/forms/_form.html.erb
@@ -1,165 +1,9 @@
-<%= form_for record, :html => {:class => "form-horizontal"} do |f| %>
-  <% if record.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(record.errors.count, "error") %> prohibited this <%= record.class.to_s.downcase %> from being saved:</h2>
-      <ul>
-      <% record.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
+<%= form_for records.first, :html => {:class => "form-horizontal", multipart: true}, url: url do |form| %>
+  <% records.each do |record| %>
+    <%= fields_helper(record, fields: fields, multi_flag: multi_flag, form_prefix: form_prefix) %>
   <% end %>
-  
-  <div class="col-md-6">
-    <% ((defined? fields) ? fields : record.class::FormFields).each do |attribute| %>
-      <% if attribute[0] == "text" %>
-        <div>
-          <%= f.label attribute[1], attribute[2] %>
-          <%= f.text_field attribute[1] %>
-        </div>
-      <% elsif attribute[0] == "date" %>
-        <div>
-          <%= f.label attribute[1], attribute[2] %> 
-          <%= select_year((record.send("#{attribute[1].to_s}_bitmask").nil? || record.send("#{attribute[1].to_s}_bitmask") & 1 == 0) ? record.send(attribute[1]).try(:year) : Date.new(10), start_year: 1950, end_year: Date.today.year, prefix: record.class.to_s.downcase, field_name: "#{attribute[1]}(1i)", include_blank: true)%>
-          <%= select_month((record.send("#{attribute[1].to_s}_bitmask").nil? || record.send("#{attribute[1].to_s}_bitmask") & 2 == 0) ? record.send(attribute[1]).try(:month) : 13, prefix: record.class.to_s.downcase, field_name: "#{attribute[1]}(2i)", include_blank: true)%>
-          <%= select_day((record.send("#{attribute[1].to_s}_bitmask").nil? || record.send("#{attribute[1].to_s}_bitmask") & 4 == 0) ? record.send(attribute[1]).try(:day) : 40, prefix: record.class.to_s.downcase, field_name: "#{attribute[1]}(3i)", include_blank: true)%>
-        </div>
-      <% elsif attribute[0] == "select" %>     
-        <div>
-          <%= f.label attribute[1], attribute[2] %>
-          <%= f.select attribute[1], attribute[3], :include_blank => true %>
-        </div> 
-      <% elsif attribute[0] == "text-area" %>
-        <div class="field">
-          <%= f.label attribute[1] %>
-          <%= f.text_area attribute[1], :rows => attribute[2], class: 'col-md-12' %>
-        </div>
-      <% elsif attribute[0] == "split" %>
-        </div> <div class="col-md-6">
-      <% elsif attribute[0] == "references" %>
-        <div id="References">
-          <% unless record.reference.nil? %>
-            <% record.reference.each do |k,v| %>
-              <div>
-                <%= fields_for "#{record.class.to_s.downcase}[reference][types]" do |f| %>
-                  <%= f.label '', "Reference Link:" %>
-                  <%= f.select '', Album::ReferenceLinks, :include_blank => true, :selected => k %>      
-                <% end %>
-                <%= fields_for "#{record.class.to_s.downcase}[reference][links]" do |f| %>
-                  <%= f.text_field '', :value => v %>
-                <% end %>
-              </div>
-            <% end %>
-          <% end %>
-          <div id="ReferenceFields"></div>
-          <%= link_to "Add a Reference", addreference_path(:fields_for => "#{record.class.to_s.downcase}[reference]"), :remote => true %></br></br>
-        </div>
-      <% elsif attribute[0] == "namehash" %>
-        <div id="Namehash" class="well">
-          <%= render :partial => 'layouts/forms/well_toggle', locals: {:div_id => 'Namehash', :toggle_id => 'NamehashToggle'} %>
-          <h4 class="text-center">Languages</h4>
-          <div id="Namehash">
-            <%= f.fields_for :namehash, record.namehash do |p| %>
-              <br>English:<%= p.text_field :English, :class => "input-large", :value => record.namehash[:English] %>
-              <br>Japanese:<%= p.text_field :Japanese, :class => "input-large", :value => record.namehash[:Japanese] %>
-              <br>Romaji:<%= p.text_field :Romaji, :class => "input-large", :value => record.namehash[:Romaji] %>
-              <br>Korean:<%= p.text_field :Korean, :class => "input-large", :value => record.namehash[:Korean] %>
-              <br>Romanized Korean:<%= p.text_field :RomanizedKorean, :class => "input-large", :value => record.namehash[:RomanizedKorean] %>
-            <% end %>
-          </div>
-        </div>
-      <% elsif attribute[0] == "events"%>
-        <div id="Events">
-          <% if record.events.nil? == false %>
-            <% record.events.each do |event| %>
-              <div>Event: <%= check_box_tag 'album[remove_events][]', event.id %> <%= link_to event.shorthand, event %></div>
-            <% end %>
-          <% end %>
-          <div id="EventFields"></div>
-          <%= link_to "Add an Event", addmodel_path(parent_div: "#EventFields", field_names: "album[new_event_shorthands]", label: "Short Name:"), :remote => true %></br></br>
-        </div>    
-      <% elsif attribute[0] == "images" %>    
-        <div id="Images"><%= f.label :images, "Add Images:" %> <%= f.file_field :images, {:multiple => true} %></br></br></div>         
-      <% elsif attribute[0] == "tags" %>
-        <div id="Tags" class="well">
-          <h4 class="text-center">Tags</h4>
-          <%= render :partial => 'tags/edit_tags', locals: {:subject => record } %>
-        </div>          
-      <% elsif attribute[0] == "related_model" %>
-        <div id=<%= attribute[1].capitalize %> class="well">
-          <%= render :partial => 'layouts/forms/well_toggle', locals: {:div_id => "#{attribute[1].capitalize}Relationships", :toggle_id => "#{attribute[1].capitalize}Toggle"} %>
-          <h4 class="text-center"> <%= "#{attribute[1].capitalize}s"%></h4>
-          <div id=<%= "#{attribute[1].capitalize}Relationships" %>>
-            <% unless record.send("#{attribute[2]}").nil?  %>
-              <% record.send("#{attribute[2]}").each do |relation| %>
-                <div class="row-fluid">
-                  <%= check_box_tag attribute[3], relation.id %>
-                  <%= link_to relation.send(attribute[1]).name, relation.send(attribute[1]) %>
-                  <% unless attribute[5].nil? %>
-                    <%= fields_for "#{attribute[5]}[#{relation.id.to_s}]" do |f| %>
-                      <%= f.select 'category', attribute[6], selected: relation.category %>
-                    <% end %>
-                  <% end %>
-                </div>
-              <% end %>
-            <% end %>
-            <div id="<%= attribute[1].capitalize %>Fields"></div>
-            <%= link_to "Add a #{attribute[1]}", addmodel_path(:parent_div => "##{attribute[1].capitalize}Fields", category_field_names: attribute[7], category_select: attribute[6], field_names: attribute[4], :autocomplete_path => "#{attribute[1]}_namehash"), :remote => true %></br></br>                   
-          </div>
-        </div>
-      <% elsif attribute[0] == "self-relations"%>
-        <div id="SelfRelations" class="well">
-          <%= render partial: 'layouts/forms/well_toggle', locals: {div_id: "SelfRelationships", toggle_id: "SelfRelationshipToggle"} %>
-          <h4 class="text-center"><%= record.class %> Relationships</h4>
-          <div id="SelfRelationships">
-            <%= render :partial => 'layouts/self_relation_edit_form', locals: {relations: record.send("related_#{record.class.to_s.downcase}_relations"), edit_fields: "#{record.class.to_s.downcase}[update_related_#{record.class.to_s.downcase}s]", remove_fields: "#{record.class.to_s.downcase}[remove_related_#{record.class.to_s.downcase}s]", model: record.class.to_s} %>
-            <div id="SelfRelationFields"></div>
-            <%= link_to "Add a Related #{record.class}", addmodel_path(parent_div: "#SelfRelationFields", self_relationship_model: record.class.to_s, category_field_names: "#{record.class.to_s.downcase}[new_related_#{record.class.to_s.downcase}_categories]", field_names: "#{record.class.to_s.downcase}[new_related_#{record.class.to_s.downcase}_ids]", autocomplete_path: "#{record.class.to_s.downcase}_namehash"), :remote => true %>         
-          </div>
-        </div>
-      <% elsif attribute[0] == "artist_albums" %>  
-        <div id="Artists" class="well">
-          <%= render :partial => 'layouts/forms/well_toggle', locals: {:div_id => 'ArtistRelationships', :toggle_id => 'ArtistToggle'} %>
-          <h4 class="text-center">Artists</h4>
-          <div id="ArtistRelationships">
-            <% unless record.artist_albums.nil? %>
-              <% record.artist_albums.each do |artistalbum| %>
-                <div class="row-fluid">
-                  <%= link_to artistalbum.artist.name, artistalbum.artist %>:
-                  <% categories = Artist.get_credits(artistalbum.category) %>
-                  <%= hidden_field_tag 'album[update_album_artists][' + artistalbum.id.to_s + '][]', '' %>
-                  <% Artist::Credits.each_with_index do |credit,n| %>
-                    <%= check_box_tag 'album[update_album_artists][' + artistalbum.id.to_s + '][]', credit, categories.include?(credit) %> <%= Artist::CreditsAbbr[n] %> 
-                  <% end %>
-                </div>
-              <% end %>
-            <% end %>
-          <div id="ArtistFields"></div>
-          <%= link_to "Add an Artist", addmodel_path(parent_div: "#ArtistFields", field_names: "album[new_artist_ids]", artist_category_names: "album[new_artist_categories][]", autocomplete_path: "artist_namehash" ), :remote => true %></br></br>     
-          </div>
-        </div>
-      <% elsif attribute[0] == "songs" %>
-        <div id="Songs" class="well">
-          <% if record.songs.empty? == true %>
-            <h4 class="text-center">Songs</h4>
-          <% else %>        
-            <h4 class="text-center">Songs <%= link_to "(Edit tracklist)", tracklist_edit_album_path %></h4>
-          <% end %>
-          <% if record.songs.nil? == false %>
-            <% record.songs.each do |song| %>
-              <div class="row-fluid">    
-                <%= song.track_number %>
-                <%= song.name %>
-              </div>
-            <% end %>
-          <% end %>
-          <div id="SongFields"></div>
-          <%= link_to "Add a song", addsong_path, :remote => true %></br></br>
-        </div>      
-      <% end %>
-    <% end %>
-  </div>
+
   <div class="actions">
-      <%= f.submit %>
+    <%= form.submit %>
   </div>
 <% end %>
