--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -1,9 +1,1 @@
-<% content_for :title do %>Edit - <%= @artist.name %><% end %>
-
-<% content_for :header do %>
-  <div class="text-center">
-    <h2>Edit Artist: <%= link_to @artist.name, @artist %></h2>
-  </div>
-<% end %>
-
-<%= render 'form' %>
+<%= render 'layouts/forms/edit', :record => @artist %>
