--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,11 +1,1 @@
-<% content_for :title do %>New Artist<% end %>
-
-<% content_for :header do %>
-  <div class="text-center">
-    <h2>New Artist</h2>
-  </div>
-<% end %>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', artists_path %>
+<%= render 'layouts/forms/new', :record => @artist %>
