--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,11 +1,1 @@
-<% content_for :title do %>New Organization<% end %>
-
-<% content_for :header do %>
-  <div class="text-center">
-    <h2>New Organization</h2>
-  </div>
-<% end %>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', organizations_path %>
+<%= render 'layouts/forms/new', :record => @organization %>
