--- a/app/views/sources/new.html.erb
+++ b/app/views/sources/new.html.erb
@@ -1,11 +1,1 @@
-<% content_for :title do %>New Source<% end %>
-
-<% content_for :header do %>
-  <div class="text-center">
-    <h2>New Source</h2>
-  </div>
-<% end %>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', sources_path %>
+<%= render 'layouts/forms/new', :record => @source %>
